# rust-chess-engine

./: Cargo.toml  LICENSE  README.md  bench.sh  deny.toml
.github/workflows/: ci.yml
benches/: chess.rs  results.md
src/: lib.rs  main.rs
src/components/: board.rs  castle.rs  constants.rs  en_passant.rs  hash.rs  mod.rs  pieces.rs  position.rs
src/evaluator/: evaluation.rs  mod.rs  static_eval.rs  transposition.rs  utils.rs
src/moves/: attack.rs  generate.rs  generator.rs  generators.rs  magic.rs  mod.rs  move_type.rs  moves.rs
src/types/: board.rs  constants.rs  mod.rs  moves.rs  piece.rs
src/utils/: evaluation.rs  mod.rs  static_evaluation.rs
