[package]
name = "corman"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
rayon = "1.11.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chess"
harness = false

[profile.release]
debug = true
